1998-11-01  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (format): Bugfix: Handle multiple arguments
	correctly.  (Thanks to Thien-Thi Nguyen.)

1998-11-01  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (exit-hook): New hook: Is run at the very end of an
	interactive session.
	(top-repl): Run exit-hook on exit.

	* readline.scm (readline-port): Maybe read history; Maybe write
	history at exit (add to exit-hook).

Fri Oct 30 15:15:37 1998  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.scm (make-readline-port): Bugfixed last change...

1998-10-28  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* readline.scm (make-readline-port): Don't set prompt to "... " if
	read line was empty.

1998-10-19  Jim Blandy  <jimb@zwingli.cygnus.com>

	* boot-9.scm, debug.scm, expect.scm, hcons.scm, lineio.scm,
 	r4rs.scm, slib.scm, threads.scm: Update copyright years.

	* getopt-gnu-style.scm, slib.scm: Add copyright notice.

	Talked to Stallman.  Actually, the syntax-case copyright is no
	problem.  Duh.
	* Makefile.am (ice9_sources): Revert last change.
	* syncase.scm, psyntax.pp, psyntax.ss: Added again.
	* Makefile.in: Regeneretade.

	* boot-9.scm: Don't assume that this file is loaded just before
	entering a read-eval-print loop.  Turn code to load (ice-9 emacs)
	into...
	(load-emacs-interface): New function.
	(top-repl): Call it, if use-emacs-interface is defined and true.
	At this point, we *do* know we're about to enter a REPL.

	We can't include Kent Dybvig's syntax-case macro expander in the
 	core Guile distribution, because we don't have copyright
 	assignments for this code.  We can certainly distribute them as a
 	separate package, but Guile should be FSF code.
	* syncase.scm, psyntax.pp, psyntax.ss: Removed.
	* Makefile.am (ice9_sources): Removed syncase.scm, psyntax.pp, and
	psyntax.ss.
	* Makefile.in: Regenerated.

	* Makefile.am (ice9_sources): Add getopt-gnu-style.scm.
	* Makefile.in: Regenerated.
